--- a/emails/password-reset/template.html
+++ b/emails/password-reset/template.html
@@ -634,7 +634,7 @@
                         <tbody><tr>
                             <td class="mcnImageContent" valign="top" style="padding-right: 0px; padding-left: 0px; padding-top: 0; padding-bottom: 0; text-align:center;">
                                 
-                                <a href="<%= resetLink %>" title="" class="" target="_blank">
+                                <a href="<%- resetLink %>" title="" class="" target="_blank">
                                         <img align="center" alt="We’ve received a request to reset your password. If you didn’t make the request, just ignore this email. Otherwise, you can reset your password by clicking below." src="https://gallery.mailchimp.com/a7f72ade53bf76a55050c6c34/images/52764936-5e4a-4544-a2eb-e198593bd60b.png" width="600" style="max-width:1200px; padding-bottom: 0; display: inline !important; vertical-align: bottom;" class="mcnImage">
                                     </a>
                                 
